--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-opencv-python-headless
-pillow
-numpy
-pandas
-scikit-learn
-tensorflow
-pytesseract
+streamlit>=1.24
+easyocr>=1.7.1
+pytesseract>=0.3.10
+opencv-python-headless>=4.7.0.72
+pillow>=9.5.0
+numpy>=1.21
+scipy>=1.7
+matplotlib>=3.7
